# solid-octo-journey

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: ai.md  cli.md  decisions.md  golden-tests.md  roadmap.md  save-format.md  tui.md
hw-ai/: Cargo.toml
hw-ai/src/: evaluation.rs  lib.rs  search.rs
hw-cli/: Cargo.toml
hw-cli/src/: lib.rs  main.rs  parser.rs  render.rs  session.rs
hw-cli/tests/: golden_sessions.rs
hw-core/: Cargo.toml
hw-core/src/: bank.rs  color.rs  game_state.rs  lib.rs  piece.rs  player.rs  size.rs  star_system.rs
hw-engine/: Cargo.toml
hw-engine/src/: action.rs  game.rs  lib.rs  save.rs  transition.rs  turn.rs
hw-engine/src/action/: tests.rs  types.rs  validation.rs
hw-engine/src/action/validation/: build.rs  catastrophe.rs  invade.rs  move.rs  sacrifice.rs  shared.rs  trade.rs  travel.rs
hw-engine/src/transition/: build.rs  catastrophe.rs  invade.rs  move.rs  sacrifice.rs  shared.rs  tests.rs  trade.rs  travel.rs
hw-engine/tests/: edge_cases.rs  full_turn_sequences.rs  sample_games.rs
hw-engine/tests/common/: mod.rs
hw-tui/: Cargo.toml
hw-tui/src/: lib.rs  main.rs  terminal.rs
tests/golden/: alexhouston_w00t_notation_example.hw  andy_russell_full_game.hw  comments_and_blanks.hw  partial_opening.hw  short_terminal_game.hw
